tree-sitter-pl4g/test/corpus/expressions.txt
================================================================================
The operators bind as the specification says
================================================================================

@[startup]
fn main() → u8:
    1u8 | 6u8 ^ 3u8 & 2u8

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (expression_statement
        (binary_expression
          (integer_literal)
          (binary_expression
            (integer_literal)
            (binary_expression
              (integer_literal)
              (integer_literal))))))))

================================================================================
Grouping and the operator written before its operand
================================================================================

@[startup]
fn main() → u8:
    ~(a | b) & c

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (expression_statement
        (binary_expression
          (unary_expression
            (parenthesized_expression
              (binary_expression
                (identifier)
                (identifier))))
          (identifier))))))

================================================================================
Literals in every base, with separators and a sign
================================================================================

let a: u8 = 0b1100_0011u8
let b: u16 = 0o1_777u16
let c: u32 = 0x_dead_beefu32
let d: i8 = ⁻128i8

--------------------------------------------------------------------------------

(source_file
  (variable_definition
    name: (identifier)
    type: (type
      (identifier))
    value: (integer_literal))
  (variable_definition
    name: (identifier)
    type: (type
      (identifier))
    value: (integer_literal))
  (variable_definition
    name: (identifier)
    type: (type
      (identifier))
    value: (integer_literal))
  (variable_definition
    name: (identifier)
    type: (type
      (identifier))
    value: (integer_literal)))

================================================================================
The comparisons bind looser than the bitwise operators
================================================================================

@[startup]
fn main() → bool:
    a & b = c

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (expression_statement
        (comparison_expression
          left: (binary_expression
            (identifier)
            (identifier))
          right: (identifier))))))

================================================================================
Every comparison, including the substitutes for two of them
================================================================================

@[startup]
fn main() → bool:
    (a = b) & (a ≠ b) & (a < b) & (a > b) & (a ≤ b) & (a ≥ b) & (a <= b) & (a >= b)

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (expression_statement
        (binary_expression
          (binary_expression
            (binary_expression
              (binary_expression
                (binary_expression
                  (binary_expression
                    (binary_expression
                      (parenthesized_expression
                        (comparison_expression
                          left: (identifier)
                          right: (identifier)))
                      (parenthesized_expression
                        (comparison_expression
                          left: (identifier)
                          right: (identifier))))
                    (parenthesized_expression
                      (comparison_expression
                        left: (identifier)
                        right: (identifier))))
                  (parenthesized_expression
                    (comparison_expression
                      left: (identifier)
                      right: (identifier))))
                (parenthesized_expression
                  (comparison_expression
                    left: (identifier)
                    right: (identifier))))
              (parenthesized_expression
                (comparison_expression
                  left: (identifier)
                  right: (identifier))))
            (parenthesized_expression
              (comparison_expression
                left: (identifier)
                right: (identifier))))
          (parenthesized_expression
            (comparison_expression
              left: (identifier)
              right: (identifier))))))))

================================================================================
The logical operators bind looser than the comparisons
================================================================================

@[startup]
fn main() → bool:
    a < b ∧ ¬ ready ∨ c ≠ d

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (expression_statement
        (logical_expression
          (logical_expression
            (comparison_expression
              left: (identifier)
              right: (identifier))
            (unary_expression
              (identifier)))
          (comparison_expression
            left: (identifier)
            right: (identifier)))))))

================================================================================
The approximate comparisons, and a name the compiler provides
================================================================================

@[startup]
fn main() → bool:
    ⎕tolerance ← 1e-9f64
    (a ≅ b) & (a ≇ b) & (a ⪅ b) & (a ⪆ b) & (a ⪉ b) & (a ⪊ b)

--------------------------------------------------------------------------------

(source_file
  (function_definition
    (attribute_list
      (attribute
        name: (identifier)))
    name: (identifier)
    parameters: (parameter_list)
    return_type: (type
      (identifier))
    body: (layout_block
      (assignment
        target: (identifier)
        value: (float_literal))
      (expression_statement
        (binary_expression
          (binary_expression
            (binary_expression
              (binary_expression
                (binary_expression
                  (parenthesized_expression
                    (comparison_expression
                      left: (identifier)
                      right: (identifier)))
                  (parenthesized_expression
                    (comparison_expression
                      left: (identifier)
                      right: (identifier))))
                (parenthesized_expression
                  (comparison_expression
                    left: (identifier)
                    right: (identifier))))
              (parenthesized_expression
                (comparison_expression
                  left: (identifier)
                  right: (identifier))))
            (parenthesized_expression
              (comparison_expression
                left: (identifier)
                right: (identifier))))
          (parenthesized_expression
            (comparison_expression
              left: (identifier)
              right: (identifier))))))))
